# promptwho

./: .gitignore  Cargo.toml  README.md
.opencode/plugins/: promptwho.ts
crates/promptwho-bootstrap/: Cargo.toml
crates/promptwho-bootstrap/src/: lib.rs
crates/promptwho-cli/: Cargo.toml
crates/promptwho-cli/src/: main.rs
crates/promptwho-core/: Cargo.toml
crates/promptwho-core/src/: attribution.rs  config.rs  ingest.rs  lib.rs  telemetry.rs
crates/promptwho-core/src/ingest/: mod.rs  service.rs
crates/promptwho-protocol/: Cargo.toml
crates/promptwho-protocol/src/: event.rs  lib.rs  server.rs  time.rs  uuid_serde.rs
crates/promptwho-protocol/src/opencode/: events.rs  message.rs  mod.rs  session.rs  shared.rs
crates/promptwho-server/: Cargo.toml
crates/promptwho-server/src/: errors.rs  extractors.rs  lib.rs  main.rs  router.rs  state.rs
crates/promptwho-server/src/routes/: dashboard.rs  events.rs  health.rs  mod.rs
crates/promptwho-server/tests/: server_integration.rs
crates/promptwho-storage/: Cargo.toml
crates/promptwho-storage-surreal/: Cargo.toml
crates/promptwho-storage-surreal/src/: lib.rs  store.rs
crates/promptwho-storage-surreal/tests/: storage_integration.rs
crates/promptwho-storage/src/: capabilities.rs  lib.rs  models.rs  queries.rs  traits.rs
crates/promptwho-watcher/: Cargo.toml
crates/promptwho-watcher/src/: emitter.rs  lib.rs  watcher.rs
dashboard/: README.md  components.json  package.json
dashboard/src/lib/: promptwho.ts
dashboard/src/lib/components/dashboard/: dashboard-filters.svelte  dashboard-header.svelte  details-dialog.svelte  event-list-card.svelte  message-list-card.svelte  project-list-card.svelte  search-results-card.svelte  session-list-card.svelte
dashboard/src/lib/elements/: light-switch.svelte
dashboard/src/lib/server/: promptwho.ts
dashboard/src/lib/shadcn/components/ui/alert/: alert-action.svelte  alert-title.svelte  alert.svelte
dashboard/src/lib/shadcn/components/ui/alert-dialog/: alert-dialog-action.svelte  alert-dialog-cancel.svelte  alert-dialog-content.svelte  alert-dialog-footer.svelte  alert-dialog-header.svelte  alert-dialog-media.svelte  alert-dialog-overlay.svelte  alert-dialog-title.svelte
dashboard/src/lib/shadcn/components/ui/badge/: badge.svelte
dashboard/src/lib/shadcn/components/ui/breadcrumb/: breadcrumb-ellipsis.svelte  breadcrumb-item.svelte  breadcrumb-list.svelte  breadcrumb-separator.svelte  breadcrumb.svelte
dashboard/src/lib/shadcn/components/ui/button-group/: button-group-separator.svelte  button-group-text.svelte  button-group.svelte
dashboard/src/lib/shadcn/components/ui/calendar/: calendar-day.svelte  calendar-month-select.svelte  calendar-month.svelte  calendar-next-button.svelte  calendar-prev-button.svelte  calendar-year-select.svelte  calendar.svelte
dashboard/src/lib/shadcn/components/ui/card/: card-action.svelte  card-content.svelte  card-footer.svelte  card-header.svelte  card-title.svelte  card.svelte
dashboard/src/lib/shadcn/components/ui/carousel/: carousel-next.svelte  carousel-previous.svelte  carousel.svelte
dashboard/src/lib/shadcn/components/ui/chart/: chart-container.svelte  chart-tooltip.svelte
dashboard/src/lib/shadcn/components/ui/checkbox/: checkbox.svelte
dashboard/src/lib/shadcn/components/ui/command/: command-dialog.svelte  command-input.svelte  command-item.svelte  command-shortcut.svelte  command.svelte
dashboard/src/lib/shadcn/components/ui/context-menu/: context-menu-checkbox-item.svelte  context-menu-content.svelte  context-menu-item.svelte  context-menu-label.svelte  context-menu-radio-item.svelte  context-menu-shortcut.svelte  context-menu-sub-content.svelte  context-menu-sub-trigger.svelte
dashboard/src/lib/shadcn/components/ui/dialog/: dialog-content.svelte  dialog-footer.svelte  dialog-header.svelte  dialog-overlay.svelte  dialog-title.svelte
dashboard/src/lib/shadcn/components/ui/drawer/: drawer-content.svelte  drawer-header.svelte  drawer-title.svelte
dashboard/src/lib/shadcn/components/ui/dropdown-menu/: dropdown-menu-content.svelte  dropdown-menu-sub-content.svelte
dashboard/src/lib/shadcn/components/ui/empty/: empty-content.svelte  empty-description.svelte  empty-header.svelte  empty-media.svelte  empty-title.svelte  empty.svelte
dashboard/src/lib/shadcn/components/ui/field/: field-content.svelte  field-description.svelte  field-error.svelte  field-group.svelte  field-label.svelte  field-legend.svelte  field-separator.svelte  field-set.svelte  field-title.svelte  field.svelte
dashboard/src/lib/shadcn/components/ui/hover-card/: hover-card-content.svelte
dashboard/src/lib/shadcn/components/ui/kbd/: kbd.svelte  (+1 more)
dashboard/src/routes/: +layout.svelte  +page.server.ts  +page.svelte  layout.css
plugin/: package.json
plugin/src/: index.ts
plugin/src/promptwho/: git.ts  transport.ts
plugins/opencode/: tsconfig.json
plugins/opencode/src/: index.ts
plugins/opencode/src/promptwho/: events.ts  git.ts  result.ts  transport.ts
plugins/promptwho/: package.json  tsconfig.json
plugins/promptwho/src/: index.ts
plugins/promptwho/src/promptwho/: transport.ts
(+81 files in other folders)
