[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
figment = { version = "0.10.19", features = [
    "env",
    "json",
    "serde_json",
    "toml",
    "yaml",
] }
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["macros"] }
clap = { version = "4.5.48", features = ["derive", "env"] }
rmp-serde = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.7"
surrealdb = { version = "2.3.7", default-features = false, features = [
    "kv-surrealkv",
] }
tower-http = { version = "0.6.6", features = ["trace"] }
thiserror = "2.0.17"
time = { version = "0.3.44", features = [
    "formatting",
    "macros",
    "parsing",
    "serde",
] }
tokio = { version = "1.47.1", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "net",
    "io-util",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "time", "uuid"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.18.1", features = ["serde", "v4", "v5"] }
