[package]
name = "promptwho-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
promptwho-protocol = { path = "../promptwho-protocol" }
promptwho-storage = { path = "../promptwho-storage" }
figment.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
dirs = "6.0.0"
