[package]
name = "promptwho-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
promptwho-core = { path = "../promptwho-core" }
promptwho-protocol = { path = "../promptwho-protocol" }
promptwho-storage = { path = "../promptwho-storage" }
rmp-serde.workspace = true
promptwho-storage-surreal = { path = "../promptwho-storage-surreal" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-scalar.workspace = true
uuid.workspace = true
chrono.workspace = true
axum-msgpack = "0.5.0"


[dev-dependencies]
axum-test = { version = "20.0.0", features = ["msgpack"] }
tempfile = "3.23.0"
chrono.workspace = true
uuid.workspace = true
